...
            android:text="TextView1"
            android:textColor="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="50.0"
            android:background="#22FFFFFF"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
...
